commit spacing correction b/t ui design and text.

--- a/sass/style.designs.scss
+++ b/sass/style.designs.scss
@@ -749,8 +749,7 @@ footer {
   p {
     font-size: 20px;
     margin: 0;
-    margin-top: 2rem;
-    margin-bottom: 5rem;
+    padding: 0;
   }
 
   /* top row */
